--- a/index.html
+++ b/index.html
@@ -138,167 +138,192 @@
   </div>
 
 <script>
-const $ = s=>document.querySelector(s);
-const title=$('#title'), timeEl=$('#time'), fill=$('#fill'), ticks=$('#ticks');
-const active=$('#activePeriod'), nextP=$('#nextPeriod'), settings=$('#settings');
+(function(){
+  var $ = function(s){ return document.querySelector(s); };
+  var title=$('#title'), timeEl=$('#time'), fill=$('#fill'), ticks=$('#ticks');
+  var active=$('#activePeriod'), nextP=$('#nextPeriod'), settings=$('#settings');
 
-const DEFAULT_PERIODS = [
-  { name:"Morgon",     start:"07:00", end:"09:00" },
-  { name:"Arbetstid",  start:"09:00", end:"17:00" },
-  { name:"Kväll",      start:"17:00", end:"22:30" },
-  { name:"Läggdags",   start:"22:30", end:"24:00" },
-  { name:"Natt",       start:"00:00", end:"07:00" },
-];
+  var DEFAULT_PERIODS = [
+    { name:"Morgon",     start:"07:00", end:"09:00" },
+    { name:"Arbetstid",  start:"09:00", end:"17:00" },
+    { name:"Kväll",      start:"17:00", end:"22:30" },
+    { name:"Läggdags",   start:"22:30", end:"24:00" },
+    { name:"Natt",       start:"00:00", end:"07:00" }
+  ];
 
-function getPeriods(){ try{ const r=localStorage.getItem('walltimer.periods'); const arr=r?JSON.parse(r):DEFAULT_PERIODS; return (Array.isArray(arr)&&arr.length)?arr:DEFAULT_PERIODS; }catch{ return DEFAULT_PERIODS; } }
-function setPeriods(p){ localStorage.setItem('walltimer.periods', JSON.stringify(p)); }
-
-function t2m(t){ const [h,m]=t.split(':').map(Number); return (h%24)*60+(m||0); }
-function nowMin(){ const n=new Date(); return n.getHours()*60+n.getMinutes()+n.getSeconds()/60; }
-function fmt(ms){ let s=Math.max(0, Math.floor(ms/1000)); const h=Math.floor(s/3600); s-=h*3600; const m=Math.floor(s/60); s-=m*60; return `${h}h ${m}m ${String(s).padStart(2,'0')}s`; }
-
-/* Splitta över midnatt */
-function expand(ps){
-  const out=[];
-  for(const p of ps){
-    const a=t2m(p.start), b=t2m(p.end);
-    if(b>=a){ out.push({...p,a,b}); }
-    else { out.push({...p,a,b:1440}); out.push({...p,name:p.name,a:0,b}); }
+  function getPeriods(){
+    try{
+      var r=localStorage.getItem('walltimer.periods');
+      var arr=r?JSON.parse(r):DEFAULT_PERIODS;
+      if (Object.prototype.toString.call(arr)==='[object Array]' && arr.length){ return arr; }
+      return DEFAULT_PERIODS;
+    }catch(e){ return DEFAULT_PERIODS; }
   }
-  return out.sort((x,y)=>x.a-y.a);
-}
+  function setPeriods(p){ localStorage.setItem('walltimer.periods', JSON.stringify(p)); }
 
-function pick(ps){
-  const n=nowMin(), list=expand(ps);
-  let cur=null, nxt=null;
-  for(let i=0;i<list.length;i++){
-    const p=list[i];
-    if(n>=p.a && n<p.b){ cur=p; nxt=list[(i+1)%list.length]; break; }
-  }
-  if(!cur){
-    nxt = list.find(p=>p.a>n) || list[0];
-    cur = { name:"Paus", a:n, b:nxt.a };
-  }
-  return {cur, nxt};
-}
-
-/* 2) Dynamiska ticks beroende på periodlängd */
-function chooseTickStep(totalMin){
-  if (totalMin <= 120) return 30;    // ≤ 2 h → 30-min steg
-  if (totalMin <= 480) return 60;    // 2–8 h → 1 h steg
-  return 120;                        // > 8 h → 2 h steg
-}
-function fmtTick(mins){
-  if (mins % 60 === 0) return `${mins/60}h`;
-  return `${mins%60}m`;
-}
-function drawTicks(totalMin){
-  ticks.innerHTML='';
-  const step = chooseTickStep(totalMin);
-  for(let at=0; at<=totalMin; at+=step){
-    const left = (at/totalMin)*100;
-    const div = document.createElement('div');
-    div.className='tick';
-    div.style.left = left+'%';
-    div.innerHTML = `<i></i><span>${fmtTick(at)}</span>`;
-    ticks.appendChild(div);
-  }
-  // markera slutet (100%)
-  const end = document.createElement('div');
-  end.className = 'tick end';
-  end.style.left = '100%';
-  end.innerHTML = `<i></i><span>slut</span>`;
-  ticks.appendChild(end);
-}
-
-/* Ljudpip */
-let audioCtx;
-function beep(ms=200, freq=880){
-  try{
-    audioCtx = audioCtx || new (window.AudioContext||window.webkitAudioContext)();
-    const o=audioCtx.createOscillator(), g=audioCtx.createGain();
-    o.connect(g); g.connect(audioCtx.destination);
-    o.type='sine'; o.frequency.value=freq; g.gain.value=.05; o.start();
-    setTimeout(()=>o.stop(), ms);
-  }catch(e){}
-}
-
-function loop(){
-  const ps=getPeriods();
-  const {cur, nxt} = pick(ps);
-  const n = new Date();
-  const nMin = n.getHours()*60 + n.getMinutes() + n.getSeconds()/60;
-  const total = (cur.b - cur.a) * 60 * 1000;
-  const passed = (nMin - cur.a) * 60 * 1000;
-  const remain = Math.max(0, total - passed);
-
-  const endMin = cur.b % 1440;
-  const endH = String(Math.floor(endMin/60)).padStart(2,'0');
-  const endM = String(endMin%60).padStart(2,'0');
-
-  /* Titel: “Tid kvar till x (kl HH:MM)” */
-  title.textContent = `Tid kvar till ${nxt.name} (kl ${endH}:${endM})`;
-
-  timeEl.textContent = fmt(remain);
-  const pct = total>0 ? Math.min(100, Math.max(0, (passed/total)*100)) : 100;
-  fill.style.width = pct + '%';
-
-  drawTicks((cur.b - cur.a));  // uppdatera tick-längd dynamiskt
-
-  active.textContent = `Nu: ${cur.name}`;
-  nextP.textContent   = `Nästa: ${nxt.name} → ${String(Math.floor(nxt.a/60)).padStart(2,'0')}:${String(nxt.a%60).padStart(2,'0')}`;
-
-  /* 3) Röd bakgrund när ≤ 10 min kvar */
-  if (remain <= 10 * 60 * 1000) { document.body.classList.add('danger'); }
-  else { document.body.classList.remove('danger'); }
-
-  if(remain<=1000 && remain>0){
-    for(let i=0;i<5;i++) setTimeout(()=>beep(120, 1000+i*60), i*180);
+  function t2m(t){ var parts=t.split(':'), h=parseInt(parts[0],10)||0, m=parseInt(parts[1],10)||0; return (h%24)*60+m; }
+  function nowMin(){ var n=new Date(); return n.getHours()*60+n.getMinutes()+n.getSeconds()/60; }
+  function z2(n){ n=String(n); return n.length<2 ? ('0'+n) : n; }
+  function fmt(ms){
+    var s=Math.max(0, Math.floor(ms/1000));
+    var h=Math.floor(s/3600); s-=h*3600;
+    var m=Math.floor(s/60); s-=m*60;
+    return h+'h '+m+'m '+z2(s)+'s';
   }
 
-  requestAnimationFrame(loop);
-}
+  function expand(ps){
+    var out=[], i, p, a, b;
+    for(i=0;i<ps.length;i++){
+      p=ps[i]; a=t2m(p.start); b=t2m(p.end);
+      if(b>=a){ out.push({name:p.name,start:p.start,end:p.end,a:a,b:b}); }
+      else { out.push({name:p.name,start:p.start,end:p.end,a:a,b:1440}); out.push({name:p.name,start:p.start,end:p.end,a:0,b:b}); }
+    }
+    out.sort(function(x,y){ return x.a-y.a; });
+    return out;
+  }
 
-/* Inställnings-UI */
-function openSettings(v=true){ settings.style.display = v? 'block':'none'; }
-function rowTpl(p,i){
-  return `<div class="row" data-i="${i}">
-    <input type="text" value="${p.name}" aria-label="Namn" placeholder="Namn (t.ex. Läggdags)" />
-    <input type="time" value="${p.start}" aria-label="Start" />
-    <input type="time" value="${p.end}" aria-label="Slut" />
-    <button data-del="${i}">Ta bort</button>
-  </div>`;
-}
-function renderRows(){ const rows=$('#rows'); const ps=getPeriods(); rows.innerHTML = ps.map((p,i)=>rowTpl(p,i)).join(''); }
-function saveRows(){
-  const rows=[...document.querySelectorAll('.row')];
-  const arr = rows.map(r=>{
-    const [name,start,end]=[...r.querySelectorAll('input')].map(x=>x.value);
-    return { name: name||'Period', start, end };
+  function pick(ps){
+    var n=nowMin(), list=expand(ps);
+    var i, cur=null, nxt=null;
+    for(i=0;i<list.length;i++){
+      var p=list[i];
+      if(n>=p.a && n<p.b){ cur=p; nxt=list[(i+1)%list.length]; break; }
+    }
+    if(!cur){
+      for(i=0;i<list.length;i++){ if(list[i].a>n){ nxt=list[i]; break; } }
+      if(!nxt) nxt=list[0];
+      cur = { name:"Paus", a:n, b:nxt.a };
+    }
+    return {cur:cur, nxt:nxt};
+  }
+
+  function chooseTickStep(totalMin){
+    if (totalMin <= 120) return 30;
+    if (totalMin <= 480) return 60;
+    return 120;
+  }
+  function fmtTick(mins){
+    if (mins % 60 === 0) return (mins/60)+'h';
+    return (mins%60)+'m';
+  }
+  function drawTicks(totalMin){
+    ticks.innerHTML='';
+    var step = chooseTickStep(totalMin);
+    for(var at=0; at<=totalMin; at+=step){
+      var left = (at/totalMin)*100;
+      var div = document.createElement('div');
+      div.className='tick';
+      div.style.left = left+'%';
+      div.innerHTML = '<i></i><span>'+fmtTick(at)+'</span>';
+      ticks.appendChild(div);
+    }
+    var end = document.createElement('div');
+    end.className = 'tick end';
+    end.style.left = '100%';
+    end.innerHTML = '<i></i><span>slut</span>';
+    ticks.appendChild(end);
+  }
+
+  var audioCtx;
+  function beep(ms,freq){
+    ms = ms || 200; freq = freq || 880;
+    try{
+      audioCtx = audioCtx || new (window.AudioContext||window.webkitAudioContext)();
+      var o=audioCtx.createOscillator(), g=audioCtx.createGain();
+      o.connect(g); g.connect(audioCtx.destination);
+      o.type='sine'; o.frequency.value=freq; g.gain.value=.05; o.start();
+      setTimeout(function(){ try{o.stop();}catch(e){} }, ms);
+    }catch(e){}
+  }
+
+  function loop(){
+    var ps=getPeriods();
+    var pickRes=pick(ps); var cur=pickRes.cur, nxt=pickRes.nxt;
+
+    var n = new Date();
+    var nMin = n.getHours()*60 + n.getMinutes() + n.getSeconds()/60;
+    var total = (cur.b - cur.a) * 60 * 1000;
+    var passed = (nMin - cur.a) * 60 * 1000;
+    var remain = Math.max(0, total - passed);
+
+    var endMin = cur.b % 1440;
+    var endH = z2(Math.floor(endMin/60));
+    var endM = z2(endMin%60);
+
+    title.textContent = 'Tid kvar till ' + nxt.name + ' (kl ' + endH + ':' + endM + ')';
+
+    timeEl.textContent = fmt(remain);
+    var pct = total>0 ? Math.min(100, Math.max(0, (passed/total)*100)) : 100;
+    fill.style.width = pct + '%';
+
+    drawTicks((cur.b - cur.a));
+
+    active.textContent = 'Nu: ' + cur.name;
+    nextP.textContent  = 'Nästa: ' + nxt.name + ' → ' + z2(Math.floor(nxt.a/60)) + ':' + z2(nxt.a%60);
+
+    if (remain <= 10 * 60 * 1000) { document.body.className = (document.body.className+' danger').trim(); }
+    else { document.body.className = document.body.className.replace(/\bdanger\b/g,'').trim(); }
+
+    if(remain<=1000 && remain>0){
+      for(var i=0;i<5;i++){
+        (function(ii){
+          setTimeout(function(){ beep(120, 1000+ii*60); }, ii*180);
+        })(i);
+      }
+    }
+
+    window.requestAnimationFrame(loop);
+  }
+
+  function openSettings(v){ settings.style.display = v? 'block':'none'; }
+  function rowTpl(p,i){
+    return '<div class="row" data-i="'+i+'">'
+         + '<input type="text" value="'+(p.name||'')+'" aria-label="Namn" placeholder="Namn (t.ex. Läggdags)" />'
+         + '<input type="time" value="'+(p.start||'00:00')+'" aria-label="Start" />'
+         + '<input type="time" value="'+(p.end||'00:00')+'" aria-label="Slut" />'
+         + '<button data-del="'+i+'">Ta bort</button>'
+         + '</div>';
+  }
+  function renderRows(){
+    var rows=$('#rows'); var ps=getPeriods();
+    var html='', i; for(i=0;i<ps.length;i++){ html+=rowTpl(ps[i], i); }
+    rows.innerHTML = html;
+  }
+  function saveRows(){
+    var nodes=document.querySelectorAll('.row'); var i, arr=[];
+    for(i=0;i<nodes.length;i++){
+      var r=nodes[i];
+      var inputs=r.querySelectorAll('input');
+      var name=inputs[0].value, start=inputs[1].value, end=inputs[2].value;
+      arr.push({ name: name||'Period', start: start, end: end });
+    }
+    setPeriods(arr); renderRows(); openSettings(false);
+  }
+
+  $('#openSettings').addEventListener('click', function(){ renderRows(); openSettings(true); });
+  var touchTimer=null;
+  document.addEventListener('touchstart', function(){ touchTimer=setTimeout(function(){ renderRows(); openSettings(true); }, 650); }, {passive:true});
+  document.addEventListener('touchend', function(){ if(touchTimer){ clearTimeout(touchTimer); touchTimer=null; }}, {passive:true});
+
+  $('#close').addEventListener('click', function(){ openSettings(false); });
+  $('#save').addEventListener('click', saveRows);
+  $('#add').addEventListener('click', function(){
+    var ps=getPeriods(); ps.push({name:"Ny period", start:"12:00", end:"13:00"}); setPeriods(ps); renderRows();
   });
-  setPeriods(arr); renderRows(); openSettings(false);
-}
+  settings.addEventListener('click', function(e){
+    var t=e.target; while(t && t!==settings && !(t.getAttribute && t.getAttribute('data-del'))){ t=t.parentNode; }
+    if(t && t.getAttribute && t.getAttribute('data-del')){
+      var i=parseInt(t.getAttribute('data-del'),10);
+      var ps=getPeriods(); ps.splice(i,1); setPeriods(ps); renderRows();
+    }
+  });
 
-$('#openSettings').addEventListener('click', ()=>{ renderRows(); openSettings(true); });
-let touchTimer=null;
-document.addEventListener('touchstart', ()=>{ touchTimer=setTimeout(()=>{ renderRows(); openSettings(true); }, 650); }, {passive:true});
-document.addEventListener('touchend', ()=>{ if(touchTimer){ clearTimeout(touchTimer); touchTimer=null; }}, {passive:true});
+  document.addEventListener('dblclick', function(){
+    var el=document.documentElement; if(el.requestFullscreen) el.requestFullscreen();
+  });
 
-$('#close').addEventListener('click', ()=> openSettings(false));
-$('#save').addEventListener('click', saveRows);
-$('#add').addEventListener('click', ()=>{
-  const ps=getPeriods(); ps.push({name:"Ny period", start:"12:00", end:"13:00"}); setPeriods(ps); renderRows();
-});
-settings.addEventListener('click', (e)=>{
-  const btn=e.target.closest('button[data-del]'); if(!btn) return;
-  const i=+btn.dataset.del; const ps=getPeriods(); ps.splice(i,1); setPeriods(ps); renderRows();
-});
-
-document.addEventListener('dblclick', ()=>{
-  const el=document.documentElement; if(el.requestFullscreen) el.requestFullscreen();
-});
-
-loop();
+  loop();
+})();
 </script>
 </body>
 </html>
